# crewai_resume_matching_service

./: .gitignore  LICENSE  README.md  env.example  main.py  pyproject.toml  requirements.txt  setup.py  test_resume_parsing.py
docs/: README.md
knowledge/: CV_Mohan.txt
src/resume_crew/: __init__.py  agents.py  tasks.py  tools.py
